# arb-bot

./: .gitignore  Cargo.toml  config.temp.json  config.temp.yml  readme.md  transactions.json
abi/: ArbBot.json
bot/: Cargo.toml
bot/src/: config.rs  lib.rs  logger.rs  main.rs  math.rs  mempool_searchers.rs  mempool_subscribers.rs  pool.rs  searcher.rs  storage.rs  types.rs  utils.rs
config/: Cargo.toml
config/src/: lib.rs
contracts/rust/ethereum-abi/: Cargo.toml
contracts/rust/ethereum-abi/src/: lib.rs
contracts/src/: ArbBot.sol
crates/api/: Cargo.toml
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/database/: Cargo.toml
crates/database/assets/: init_tables.sql
crates/database/src/: lib.rs  main.rs  postgres.rs  redis.rs  tables.rs
crates/dexes/: Cargo.toml
crates/dexes/common/: Cargo.toml
crates/dexes/common/src/: lib.rs
crates/dexes/src/: common.rs  lib.rs  uniswap_v2.rs
crates/dexes/sushi-swap/: Cargo.toml
crates/dexes/sushi-swap/src/: lib.rs
crates/dexes/uniswap-v2/: Cargo.toml
crates/dexes/uniswap-v2/src/: lib.rs
crates/executor/: Cargo.toml
crates/executor/src/: lib.rs
crates/logger/: Cargo.toml
crates/math/: Cargo.toml
crates/math/src/: cpmm.rs  lib.rs
crates/mev/: Cargo.toml
crates/mev/src/: main.rs
database/: Cargo.toml
database/assets/: init_tables.sql
database/src/: lib.rs  main.rs  postgres.rs  redis.rs  tables.rs
dexes/common/: Cargo.toml
dexes/common/src/: lib.rs
dexes/uniswap-v2/: Cargo.toml
dexes/uniswap-v2/src/: lib.rs
executor/: Cargo.toml
executor/src/: lib.rs
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/custom/: Analytics.tsx  ArbitrageTable.tsx  ChordChart.tsx  Menu.tsx
logger/: Cargo.toml
math/: Cargo.toml
math/src/: cpmm.rs  lib.rs
solidity/iuniswap_v3_pool/: Readme.md
src/: config.rs  constants.rs  contracts.rs  lib.rs  main.rs  pool.rs  strategy.rs  streams.rs  tx_filter.rs  types.rs  uniswap_v2.rs  uniswapv2.rs  utils.rs
src/event_filters/: uniswap.rs
src/uniswap/: mod.rs  processor.rs  types.rs
storage/: Cargo.toml
storage/assets/: init_tables.sql
storage/src/: lib.rs  mem_db.rs  postgres.rs  storage.rs  tables.rs
strategies/: Cargo.toml
strategies/src/: lib.rs  triangular_swap.rs
uniswap-stats/: Cargo.toml
uniswap-stats/src/: main.rs
