[workspace.package]
version = "1.7.1"
authors = ["Kuzmin Dmitry"]
edition = "2021"
license = "GPL-3.0"
rust-version = "1.84"

[workspace]
resolver = "2"

members = [
    "bot",
    "config",
    "contracts/rust/ethereum-abi",
    "database",
    "strategies",
    "uniswap-stats",
]

[workspace.dependencies]
tokio = { version = "1.43.0", features = ["full"] }
tokio-postgres = "0.7"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
alloy = { version = "0.12.4", features = [
    "full",
    "provider-anvil-api",
    "rpc-client-ipc",
    "node-bindings",
] }
futures-util = "0.3"
serde_json = "1.0.137"
serde = "1.0.217"
hex = "0.4.3"
tracing-appender = "0.2.3"
anyhow = "1.0.95"
enum-iterator = "2.1.0"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
dotenv = { version = "0.15.0" }
hashbrown = { version = "0.15.2" }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres"] }
redis = { version = "0.29.2", features = ["tokio-comp"] }
bb8 = { version = "0.9.0" }
bb8-redis = { version = "0.21.0" }

# local deps
bot = { path = "bot", default-features = false }
strategies = { path = "strategies", default-features = false }
ethereum-abi = { path = "contracts/rust/ethereum-abi" }
bot_db = { path = "database" }
bot_config = { path = "config" }
