[package]
name = "bot"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true


[dependencies]
tokio.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
alloy.workspace = true
futures-util.workspace = true
serde_json.workspace = true
serde.workspace = true
hex.workspace = true
tracing-appender.workspace = true
anyhow.workspace = true
enum-iterator.workspace = true
crossbeam.workspace = true
dotenv.workspace = true
hashbrown.workspace = true

# local
ethereum-abi.workspace = true
bot_db.workspace = true
bot_config.workspace = true
bot_logger.workspace = true

# dexes
uniswap-v2.workspace = true
dex-common.workspace = true
