[package]
name = "kronos"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true


[dependencies]
tokio.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
alloy = { workspace = true, features = ["pubsub"] }
futures-util.workspace = true
# serde_json.workspace = true
serde.workspace = true
hex.workspace = true
tracing-appender.workspace = true
anyhow.workspace = true
enum-iterator.workspace = true
crossbeam.workspace = true
dotenv.workspace = true
hashbrown.workspace = true
futures.workspace = true
derive_more.workspace = true

# local
ethereum-abi.workspace = true
kronos-db.workspace = true
kronos-config.workspace = true
kronos-logger.workspace = true
kronos-executor.workspace = true

# dexes
kronos-dexes.workspace = true
