[package]
name = "bot_executor"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
alloy.workspace = true
anyhow.workspace = true
crossbeam.workspace = true
bot_math.workspace = true
tracing.workspace = true
#
bot_db.workspace = true
dex-common.workspace = true
ethereum-abi.workspace = true
