[package]
name = "storage"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
alloy.workspace = true
tokio-postgres.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
hashbrown.workspace = true

#
ethereum-abi.workspace = true
