[package]
name = "kronos-db"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
alloy.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
hashbrown.workspace = true
sqlx.workspace = true
serde.workspace = true
redis.workspace = true
bb8.workspace = true
bb8-redis.workspace = true

#
ethereum-abi.workspace = true
kronos-config.workspace = true
kronos-logger.workspace = true


# kronos-dexes.workspace = true
kronos-common.workspace = true