[package]
name = "kronos-dexes"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
alloy.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
sqlx.workspace = true
hashbrown.workspace = true
crossbeam.workspace = true
thiserror.workspace = true
futures.workspace = true
tokio.workspace = true

# local
ethereum-abi.workspace = true
kronos-db.workspace = true
kronos-math.workspace = true
kronos-common.workspace = true
