[package]
name = "kronos-executor"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
alloy.workspace = true
anyhow.workspace = true
crossbeam.workspace = true
kronos-math.workspace = true
tracing.workspace = true
futures.workspace = true
tokio.workspace = true

#
kronos-db.workspace = true
ethereum-abi.workspace = true
kronos-dexes.workspace = true
