[package]
name = "kronos-math"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
alloy.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
async-trait.workspace = true

#local
kronos-config.workspace = true
kronos-logger.workspace = true
ethereum-abi.workspace = true
kronos-db.workspace = true
kronos-common.workspace = true

#dexes
# kronos-dexes.workspace = true
